--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
     "dev": "nodemon"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.14",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.9",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.2"
   },
   "dependencies": {
     "@types/node": "^22.10.2",
+    "axios": "^1.7.9",
     "es-toolkit": "^1.30.1",
     "tsconfig-paths": "^4.2.0",
     "zod": "^3.24.1"
