--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "main": "src/index.js",
   "author": {
-    "name": "모바일팀/Brown",
+    "name": "모바일팀 / Brown",
     "email": "brown.yoo@gbike.io"
   },
   "license": "MIT",
@@ -11,10 +11,13 @@
     "build": "tsc",
     "prestart": "yarn build",
     "start": "ts-node -r tsconfig-paths/register src/index.ts",
-    "dev": "nodemon"
+    "dev": "nodemon",
+    "test": "jest"
   },
   "devDependencies": {
+    "@types/inquirer": "^9.0.7",
     "@types/jest": "^29.5.14",
+    "@types/node": "^22.10.2",
     "jest": "^29.7.0",
     "nodemon": "^3.1.9",
     "ts-jest": "^29.2.5",
@@ -22,9 +25,11 @@
     "typescript": "^5.7.2"
   },
   "dependencies": {
-    "@types/node": "^22.10.2",
     "axios": "^1.7.9",
+    "dayjs": "^1.11.13",
     "es-toolkit": "^1.30.1",
+    "inquirer": "^12.3.0",
+    "picocolors": "^1.1.1",
     "tsconfig-paths": "^4.2.0",
     "zod": "^3.24.1"
   }
