--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "inquirer": "^12.3.0",
     "picocolors": "^1.1.1",
     "tsconfig-paths": "^4.2.0",
-    "zod": "^3.24.1"
+    "zod": "^3.24.1",
+    "zustand": "^5.0.2"
   }
 }
