--- a/package.json
+++ b/package.json
@@ -25,11 +25,14 @@
     "typescript": "^5.7.2"
   },
   "dependencies": {
+    "@types/express": "^5.0.0",
     "axios": "^1.7.9",
     "dayjs": "^1.11.13",
     "es-toolkit": "^1.30.1",
+    "express": "^4.21.2",
     "inquirer": "^12.3.0",
     "picocolors": "^1.1.1",
+    "stripe": "^17.7.0",
     "tsconfig-paths": "^4.2.0",
     "yup": "^1.6.1",
     "zustand": "^5.0.2"
